samples/_failures_safe/1761004988_c831fd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6af69c31.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_6af69c31.c:173:14: error: ‘TOKEN_’ undeclared (first use in this function)
  173 |         case TOKEN_
      |              ^~~~~~
./samples/SAFE/__tmp_6af69c31.c:173:14: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_6af69c31.c:173:9: error: expected ‘:’ or ‘...’ at end of input
  173 |         case TOKEN_
      |         ^~~~
./samples/SAFE/__tmp_6af69c31.c:173:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6af69c31.c:173:9: error: expected declaration or statement at end of input
